0.7 unreleased
--------------

- Added Italian localization [paulox]

- Added Owner to role's vocabulary [paulox]

0.6 2008-10-02
--------------

- Fixed and added tests [fredvd]

- Updated locales [fredvd]

0.5 unreleased
--------------

- Add locales [fredvd]

- Fix acquired roles checking & look up email addresses [fredvd]

- Add checking for acquired roles [fredvd]

- Import basic version from a client project [fredvd]